<resources>
    <string name="app_name">DatabaseExample</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="button_new_contact">Create Contact</string>
    <string name="button_add_contact">Add New Contact</string>

    <string name="description_input_name">User name</string>
</resources>